--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/Shimakaze.Utils.Native.Mix"
+    "cmake.sourceDirectory": "${workspaceFolder}/Shimakaze.Utils.Mix.Native"
 }
