--- a/src/Shimakaze.Utils.Mix/Shimakaze.Utils.Mix.csproj
+++ b/src/Shimakaze.Utils.Mix/Shimakaze.Utils.Mix.csproj
@@ -4,12 +4,10 @@
     <OutputType>Library</OutputType>
     <Nullable>enable</Nullable>
     <TargetFramework>net5.0</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Shimakaze.Utils.Mix.Native-x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Update="Shimakaze.Utils.Mix.Native.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
